--- a/templates/contact.html
+++ b/templates/contact.html
@@ -15,8 +15,7 @@
                 {% endif %}
             {% endwith %}
 
-			<p>Want to get in touch? Fill out the form below to send me a message and I will get back to you as soon as
-                possible!</p>
+			<p>Learn more and get more information , fill the form and we will get back to you as soon as possible.</p>
 			<form method="POST" name="sentMessage" id="contactForm" novalidate>
 				<div class="control-group">
 					<div class="form-group floating-label-form-group controls">
