--- a/templates/about.html
+++ b/templates/about.html
@@ -5,24 +5,24 @@
     atmosphere in which every infant can flourish. Our parents enjoy being part of each day through our classroom
     webcams.</p>
 
-{% for member in company %} {% if loop.index % 2 != 0 %}
+{% for kid in school %} {% if loop.index % 2 != 0 %}
 <div class="row featurette">
     <div class="col-md-7">
-        <h3><a href="/about/{{ member.url }}">{{ loop.index }}. {{ member.name }}</a></h3>
-        <p>{{ member.description }}</p>
+        <h3><a href="/about/{{ kid.url }}">{{ loop.index }}. {{ kid.name }}</a></h3>
+        <p>{{ kid.description }}</p>
     </div>
     <div class="col-md-5">
-        <img class="featurette-image img-responsive" src="{{ member.image_source }}" alt="Picture of {{ member.name }}">
+        <img class="featurette-image img-responsive" src="{{ kid.image_source }}" alt="Picture of {{ kid.name }}">
     </div>
 </div>
 {% else %}
 <div class="row featurette">
     <div class="col-md-5">
-        <img class="featurette-image img-responsive" src="{{ member.image_source }}" alt="Picture of {{ member.name }}">
+        <img class="featurette-image img-responsive" src="{{ kid.image_source }}" alt="Picture of {{ kid.name }}">
     </div>
     <div class="col-md-7">
-        <h3><a href="/about/{{ member.url }}">{{ loop.index }}. {{ member.name }}</a></h3>
-        <p>{{ member.description }}</p>
+        <h3><a href="/about/{{ kid.url }}">{{ loop.index }}. {{ kid.name }}</a></h3>
+        <p>{{ kid.description }}</p>
     </div>
 </div>
 {% endif %} {% if loop.index != 13 %}
