--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,7 +2,7 @@
     width: 100%;
 }
 body {
-  background-color:#1d1d1d !important;
+  background-color:#ffb1ff !important;
   font-family: "Asap", sans-serif;
   color:#989898;
   margin:10px;
