--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,7 @@
 	</nav>
 	
 	<!-- Page Header -->
-	<header class="masthead" style="background-image: url('https://images.unsplash.com/photo-1555448049-8affc0fd79f3?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80')">
+	<header class="masthead" style="background-image: url('https://www.familyeducation.com/sites/default/files/2018-08/Preparing-for-Daycare-Feature.jpg')">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row">
