--- a/templates/index.html
+++ b/templates/index.html
@@ -20,49 +20,49 @@
 
 
         <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-            <a href="https://images.unsplash.com/photo-1587616211892-f743fcca64f9?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1054&q=80"
+            <a href="https://news.utexas.edu/wp-content/uploads/2018/12/Teacher.jpg"
                 class="fancybox" rel="ligthbox">
-                <img src="https://images.unsplash.com/photo-1587616211892-f743fcca64f9?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1054&q=80"
+                <img src="https://news.utexas.edu/wp-content/uploads/2018/12/Teacher.jpg"
                     class="zoom img-fluid " alt="">
 
             </a>
         </div>
         <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-            <a href="https://images.unsplash.com/photo-1567405258710-35a7015252c0?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80"
+            <a href="https://www.thepillarsclc.com/wp-content/uploads/2018/09/Preschool-VS-Pre-Kindergarten-5ba270d6d36d3-300x200.jpg"
                 class="fancybox" rel="ligthbox">
-                <img src="https://images.unsplash.com/photo-1567405258710-35a7015252c0?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80"
+                <img src="https://www.thepillarsclc.com/wp-content/uploads/2018/09/Preschool-VS-Pre-Kindergarten-5ba270d6d36d3-300x200.jpg"
                     class="zoom img-fluid" alt="">
             </a>
         </div>
 
         <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-            <a href="https://images.unsplash.com/photo-1557452765-5b57d100c1dc?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80"
+            <a href="https://www.lowellsun.com/wp-content/uploads/2020/01/GettyImages-998670532.jpg"
                 class="fancybox" rel="ligthbox">
-                <img src="https://images.unsplash.com/photo-1557452765-5b57d100c1dc?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80"
+                <img src="https://www.lowellsun.com/wp-content/uploads/2020/01/GettyImages-998670532.jpg"
                     class="zoom img-fluid " alt="">
             </a>
         </div>
 
         <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-            <a href="https://images.unsplash.com/photo-1516627145497-ae6968895b74?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1024&q=80"
+            <a href="https://daily.jstor.org/wp-content/uploads/2015/06/Kindergarten.jpg"
                 class="fancybox" rel="ligthbox">
-                <img src="https://images.unsplash.com/photo-1516627145497-ae6968895b74?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1024&q=80"
+                <img src="https://daily.jstor.org/wp-content/uploads/2015/06/Kindergarten.jpg"
                     class="zoom img-fluid " alt="">
             </a>
         </div>
 
         <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-            <a href="https://images.unsplash.com/photo-1560541919-eb5c2da6a5a3?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80"
+            <a href="https://equinoxschool.ca/wp-content/uploads/2017/03/Science.jpg"
                 class="fancybox" rel="ligthbox">
-                <img src="https://images.unsplash.com/photo-1560541919-eb5c2da6a5a3?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80"
+                <img src="https://equinoxschool.ca/wp-content/uploads/2017/03/Science.jpg"
                     class="zoom img-fluid " alt="">
             </a>
         </div>
 
         <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-            <a href="https://images.unsplash.com/photo-1594808778326-16c092a42bbc?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80"
+            <a href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTAH4RhqNvZqJ6cGkL9SVJCBuZl46EqUyIujQ&usqp=CAU"
                 class="fancybox" rel="ligthbox">
-                <img src="https://images.unsplash.com/photo-1594808778326-16c092a42bbc?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80"
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTAH4RhqNvZqJ6cGkL9SVJCBuZl46EqUyIujQ&usqp=CAU"
                     class="zoom img-fluid " alt="">
             </a>
         </div>
