--- a/templates/base.html
+++ b/templates/base.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+        integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous" />
     <link rel="stylesheet" href="{{ url_for('static', filename='vendor/bootstrap/css/bootstrap.min.css') }}" type="text/css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/clean-blog.min.css') }}" type="text/css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/clean-blog.css') }}" type="text/css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
     <title>Little Stars</title>
 </head>
@@ -67,7 +70,7 @@
 				<div class="col-lg-8 col-md-10 mx-auto">
 					<ul class="list-inline text-center">
 						<li class="list-inline-item">
-							<a href="#">
+							<a href="https://twitter.com/">
 								<span class="fa-stack fa-lg">
 	                  <i class="fas fa-circle fa-stack-2x"></i>
 	                  <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
@@ -75,15 +78,15 @@
 							</a>
 						</li>
 						<li class="list-inline-item">
-							<a href="#">
+							<a href="https://www.linkedin.com/in/wiam-salaheldin-12151b89/">
 								<span class="fa-stack fa-lg">
 	                  <i class="fas fa-circle fa-stack-2x"></i>
-	                  <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
+	                  <i class="fab fa-linkedin fa-stack-1x fa-inverse"></i>
 	                </span>
 							</a>
 						</li>
 						<li class="list-inline-item">
-							<a href="#">
+							<a href="https://github.com/WiamSalaheldin">
 								<span class="fa-stack fa-lg">
 	                  <i class="fas fa-circle fa-stack-2x"></i>
 	                  <i class="fab fa-github fa-stack-1x fa-inverse"></i>
