--- a/templates/contact.html
+++ b/templates/contact.html
@@ -16,7 +16,7 @@
             {% endwith %}
 
 			<p>Learn more and get more information , fill the form and we will get back to you as soon as possible.</p>
-			<form method="POST" name="sentMessage" id="contactForm" novalidate>
+			<form method="POST" name="sentMessage" id="contactForm">
 				<div class="control-group">
 					<div class="form-group floating-label-form-group controls">
 						<label>Name</label>
