--- a/templates/index.html
+++ b/templates/index.html
@@ -16,13 +16,14 @@
 
 
 
-    <div class="row">
+   <div class="row">
 
 
         <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-            <a href="https://news.utexas.edu/wp-content/uploads/2018/12/Teacher.jpg" class="fancybox" rel="ligthbox">
-                <img src="https://news.utexas.edu/wp-content/uploads/2018/12/Teacher.jpg" class="rounded-circle"
-                    alt="Cinque Terre" width="290" height="236">
+            <a href="https://news.utexas.edu/wp-content/uploads/2018/12/Teacher.jpg"
+                class="fancybox" rel="ligthbox">
+                <img src="https://news.utexas.edu/wp-content/uploads/2018/12/Teacher.jpg"
+                    class="zoom img-fluid " alt="">
 
             </a>
         </div>
@@ -30,40 +31,38 @@
             <a href="https://www.thepillarsclc.com/wp-content/uploads/2018/09/Preschool-VS-Pre-Kindergarten-5ba270d6d36d3-300x200.jpg"
                 class="fancybox" rel="ligthbox">
                 <img src="https://www.thepillarsclc.com/wp-content/uploads/2018/09/Preschool-VS-Pre-Kindergarten-5ba270d6d36d3-300x200.jpg"
-                   class="rounded-circle"
-                    alt="Cinque Terre" width="290" height="236">
+                    class="zoom img-fluid" alt="">
             </a>
         </div>
 
         <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-            <a href="https://www.lowellsun.com/wp-content/uploads/2020/01/GettyImages-998670532.jpg" class="fancybox"
-                rel="ligthbox">
+            <a href="https://www.lowellsun.com/wp-content/uploads/2020/01/GettyImages-998670532.jpg"
+                class="fancybox" rel="ligthbox">
                 <img src="https://www.lowellsun.com/wp-content/uploads/2020/01/GettyImages-998670532.jpg"
-                   class="rounded-circle"
-                    alt="Cinque Terre" width="290" height="236">
+                    class="zoom img-fluid " alt="">
             </a>
         </div>
 
         <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-            <a href="https://daily.jstor.org/wp-content/uploads/2015/06/Kindergarten.jpg" class="fancybox"
-                rel="ligthbox">
-                <img src="https://daily.jstor.org/wp-content/uploads/2015/06/Kindergarten.jpg" class="rounded-circle"
-                    alt="Cinque Terre" width="290" height="236">
+            <a href="https://daily.jstor.org/wp-content/uploads/2015/06/Kindergarten.jpg"
+                class="fancybox" rel="ligthbox">
+                <img src="https://daily.jstor.org/wp-content/uploads/2015/06/Kindergarten.jpg"
+                    class="zoom img-fluid " alt="">
             </a>
         </div>
 
         <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-            <a href="https://equinoxschool.ca/wp-content/uploads/2017/03/Science.jpg" class="fancybox" rel="ligthbox">
-                <img src="https://equinoxschool.ca/wp-content/uploads/2017/03/Science.jpg" class="rounded-circle"
-                    alt="Cinque Terre" width="290" height="236">
+            <a href="https://equinoxschool.ca/wp-content/uploads/2017/03/Science.jpg"
+                class="fancybox" rel="ligthbox">
+                <img src="https://equinoxschool.ca/wp-content/uploads/2017/03/Science.jpg"
+                    class="zoom img-fluid " alt="">
             </a>
         </div>
         <div class="col-lg-3 col-md-4 col-xs-6 thumb">
             <a href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTAH4RhqNvZqJ6cGkL9SVJCBuZl46EqUyIujQ&usqp=CAU"
                 class="fancybox" rel="ligthbox">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTAH4RhqNvZqJ6cGkL9SVJCBuZl46EqUyIujQ&usqp=CAU"
-                    class="rounded-circle"
-                    alt="Cinque Terre" width="290" height="236">
+                    class="zoom img-fluid " alt="">
             </a>
         </div>
 
@@ -71,8 +70,7 @@
             <a href="https://images.unsplash.com/photo-1596464716127-f2a82984de30?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80"
                 class="fancybox" rel="ligthbox">
                 <img src="https://images.unsplash.com/photo-1596464716127-f2a82984de30?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80"
-                    class="rounded-circle"
-                    alt="Cinque Terre" width="290" height="236">
+                    class="zoom img-fluid " alt="">
             </a>
         </div>
 
@@ -80,8 +78,7 @@
             <a href="https://images.unsplash.com/photo-1469406396016-013bfae5d83e?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80"
                 class="fancybox" rel="ligthbox">
                 <img src="https://images.unsplash.com/photo-1469406396016-013bfae5d83e?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80"
-                    class="rounded-circle"
-                    alt="Cinque Terre" width="290" height="236">
+                    class="zoom img-fluid " alt="">
             </a>
         </div>
 
@@ -94,4 +91,5 @@
 
 
 </div>
+
 {% endblock %}
